--- a/MvvmTools/packages.config
+++ b/MvvmTools/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  
+  <package id="CommonServiceLocator" version="1.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="JetBrains.Annotations.Redist" version="7.1.0" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.VisualStudio.SDK.VsixSuppression" version="14.0.50420-pre" targetFramework="net45" userInstalled="true" />
-  
+  <package id="Prism" version="5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Prism.Composition" version="5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Prism.Mvvm" version="1.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Prism.UnityExtensions" version="5.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Unity" version="3.5.1404" targetFramework="net45" userInstalled="true" />
 </packages>
