--- a/MvvmTools/packages.config
+++ b/MvvmTools/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.2.0" targetFramework="net45" userInstalled="true" />
   <package id="JetBrains.Annotations.Redist" version="7.1.0" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.VisualStudio.SDK.VsixSuppression" version="14.0.50420-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject" version="3.2.2" targetFramework="net45" userInstalled="true" />
   <package id="Prism" version="5.0.0" targetFramework="net45" userInstalled="true" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net45" userInstalled="true" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" userInstalled="true" />
