--- a/MvvmTools/app.config
+++ b/MvvmTools/app.config
@@ -8,4 +8,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <!--  
+    Added this to fix an annoying error in Visual Studio detailed here:
+    http://www.lyalin.com/2014/04/25/the-type-system-object-is-defined-in-an-assembly-that-is-not-reference-mvc-pcl-issue/  
+  -->
+  <compilation debug="true" targetFramework="4.5">
+    <assemblies>
+      <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    </assemblies>
+  </compilation>
 </configuration>
