Working on Web Api, specifically the oauth 2.0 token based authentication.

--- a/MvvmTools.Shared/MvvmTools.Shared.csproj
+++ b/MvvmTools.Shared/MvvmTools.Shared.csproj
@@ -90,7 +90,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\MvvmTemplateDTO.cs" />
+    <Compile Include="Models\Template.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Secrets.cs" />
   </ItemGroup>
