--- a/MvvmTools.Core/packages.config
+++ b/MvvmTools.Core/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CacheCow.Client" version="1.0.0" targetFramework="net451" />
+  <package id="CacheCow.Common" version="1.0.0" targetFramework="net451" />
   <package id="CommonServiceLocation" version="1.0.0" targetFramework="net45" />
   <package id="DynamicDataDisplayWpf" version="0.4.0" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="9.1.1" targetFramework="net45" />
   <package id="LiveSDKHelper" version="0.1.0.8" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net45" />
@@ -13,6 +16,7 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.0.22823-RC" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070-pre" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Project" version="1.0.0.0" targetFramework="net45" />
