Implemented external login provider Microsoft.

--- a/MvvmTools.Web/Web.Release.config
+++ b/MvvmTools.Web/Web.Release.config
@@ -29,5 +29,10 @@
     -->
 
     <!--<customErrors mode="On" xdt:Transform="Replace"/>-->
+
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" requireSSL="true" xdt:Transform="Replace" />
+    </authentication>
+    <httpCookies httpOnlyCookies="true" requireSSL="true" lockItem="true" xdt:Transform="Replace" />
   </system.web>
 </configuration>
