--- a/MvvmTools.Web/Web.config
+++ b/MvvmTools.Web/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-MvvmTools.Web-20150131053014.mdf;Initial Catalog=aspnet-MvvmTools.Web-20150131053014;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MvvmTools_db;Integrated Security=False;Persist Security Info=True;User ID=db;Password=password" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -27,15 +27,15 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error">
+    <customErrors mode="RemoteOnly" defaultRedirect="~/Error">
       <error redirect="~/Error/NotFound" statusCode="404" />
     </customErrors>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" requireSSL="true" />
+      <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5" enableVersionHeader="false"/>
-    <httpCookies httpOnlyCookies="true" requireSSL="true" lockItem="true" />
+    <httpCookies httpOnlyCookies="true" lockItem="true" />
   </system.web>
   <system.webServer>
     <security>
