--- a/MvvmTools.Web/MvvmTools.Web.csproj
+++ b/MvvmTools.Web/MvvmTools.Web.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>MvvmTools.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort>44300</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -39,13 +39,6 @@
     <IncludeIisSettings>false</IncludeIisSettings>
     <PublishDatabaseSettings>
       <Objects>
-        <ObjectGroup Name="DefaultConnection-Deployment" Order="1">
-          <Destination Path="" />
-          <Object Type="DbFullSql">
-            <PreSource Path="Data Source=%28LocalDb%29\v11.0%3bAttachDbFilename=|DataDirectory|\aspnet-MvvmTools.Web-20150131053014.mdf%3bInitial Catalog=aspnet-MvvmTools.Web-20150131053014%3bIntegrated Security=True" ScriptSchema="True" ScriptData="False" CopyAllFullTextCatalogs="False" DriDefaults="True" />
-            <Source Path="obj\Debug\AutoScripts\DefaultConnection-Deployment_SchemaOnly.sql" Transacted="True" />
-          </Object>
-        </ObjectGroup>
       </Objects>
     </PublishDatabaseSettings>
   </PropertyGroup>
@@ -240,7 +233,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Attributes\EnforceHttpsHandler.cs" />
-    <Compile Include="Attributes\ProjectSpecificHttpsAttribute.cs" />
+    <Compile Include="Attributes\EnforceHttpsAttribute.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\TemplateCategoriesController.cs" />
     <Compile Include="Controllers\Api\TemplatesController.cs" />
@@ -252,6 +246,7 @@
     <Compile Include="Controllers\MvvmTemplatesController.cs" />
     <Compile Include="Controllers\ValidationController.cs" />
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
+    <Compile Include="Extensions\UrlHelperExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -357,7 +352,9 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\src\app.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -456,9 +453,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>60821</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:60821/</IISUrl>
+          <IISUrl>http://localhost/MvvmTools.Web</IISUrl>
           <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
-          <IISAppRootUrl>https://localhost:44300/</IISAppRootUrl>
+          <IISAppRootUrl>http://www.mvvmtools.net/MvvmTools.Web</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
